--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.25",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "node-xlsx": "^0.21.0",
